--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Jameskomo Portfolio Landing Page</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="bodybg">
+    <img id="displayphoto" src="images/jkomo.png" alt="my photo"> <br>
+    <h1 class="myname">James Komo </h1>
 
   </body>
 </html>
