inline elements added for my name on page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body class="bodybg">
     <img id="displayphoto" src="images/jkomo.png" alt="my photo"> <br>
-    <h1 class="myname">James Komo </h1>
+    <h1 class="myname"><em> <strongName> <u>Name: James Komo<u></em> </strongName> </h1>
+
 
   </body>
 </html>
