About me div added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body class="bodybg">
+    <div class=personaldetails>
     <img id="displayphoto" src="images/jkomo.png" alt="my photo"> <br>
     <h1 class="myname"><em> <strongName> <u>Name: James Komo<u></em> </strongName> </h1>
+      <p id=mytagline> I am here to create; not to become </p>
+    </div>
+
+  <div id="aboutme">
+    <h2>About me</h2>
+    <p> I am passionate about coding; not just typing away commands but creating things from ideation to deployment</p>
+  </div>
 
 
   </body>
