projects section flexboxes added

--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <title>Jameskomo Portfolio Landing Page</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
-  <body class="bodybg">
-    <div class=personaldetails>
-    <img id="displayphoto" src="images/jkomo.png" alt="my photo"> <br>
+  <body>
+    <div class="personaldetails">
+    <img class="displayphoto" src="images/jkomo.png" alt="my photo"> <br>
     <h1 class="myname"><em> <strongName> <u>Name: James Komo<u></em> </strongName> </h1>
       <p id=mytagline> I am here to create; not to become </p>
     </div>
 
-  <div id="aboutme">
+  <div class="aboutme">
     <h2>About me</h2>
-    <p> I am passionate about coding; not just typing away commands but creating things from ideation to deployment</p>
+    <p> I am passionate about coding; not just typing away commands but creating things from ideation to deployment: Below are some of my projects:</p>
+    <ol>
+      <li class=projects-container1>Cookie Recipe</li>
+      <li class=projects-container2>Travel Agency Website</li>
+      <li class=projects-container3>Portfolio Landing Page</li>
+    </ul>
   </div>
 
 
