Padding and Margins added for about me and projects section

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 
   <div class="aboutme">
     <h2>About me</h2>
-    <p> I am passionate about coding; not just typing away commands but creating things from ideation to deployment: Below are some of my projects:</p>
+    <p> I am passionate about coding; not just typing away commands but creating things from ideation to deployment.</p>
+    </div>
+    <h2 class="projectsdone">Projects</h2>
     <ol>
-      <li class=projects-container1>Cookie Recipe</li>
-      <li class=projects-container2>Travel Agency Website</li>
-      <li class=projects-container3>Portfolio Landing Page</li>
+      <li class="projects-container1">Cookie Recipe</li>
+      <li class="projects-container2">Travel Agency Website</li>
+      <li class="projects-container3">Portfolio Landing Page</li>
     </ul>
-  </div>
-
-
   </body>
 </html>
