--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
     <h2>About me</h2>
     <p> I am passionate about coding; not just typing away commands but creating things from ideation to deployment.</p>
     </div>
-    <h2 class="projectsdone">Projects</h2>
-    <ol>
-      <li class="projects-container1">Cookie Recipe</li>
-      <li class="projects-container2">Travel Agency Website</li>
-      <li class="projects-container3">Portfolio Landing Page</li>
-    </ul>
-  </body>
+  <div  class="projectsdone">
+    <h2>Projects</h2>
+
+    <div class="projects-container1">
+      <p>Cookie Recipe<br>This is a project that uses HTML and CSS to illustrate use of floats and dic elements</p>
+    </div>
+    <div class="projects-container1">
+      <p>Travel Website<br>This is a project that uses HTML and CSS to illustrate use of floats and dic elements</p>
+    </div>
+    <div class="projects-container1">
+      <p>Portfolio Landing Page<br>This is a project that uses HTML and CSS to illustrate use of floats and dic elements</p>
+    </div>
+  </div>
+
+      </body>
 </html>
