links to projects created through anchor text element

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <h2>Projects</h2>
 
     <div class="projects-container1">
-      <p>Cookie Recipe<br>This is a project that uses HTML and CSS to illustrate use of floats and dic elements</p>
+      <p>Cookie Recipe<br>This is a project that uses HTML and CSS to to practice fixing indentation, spacing and HTML tag placement.<br><a href="https://github.com/jameskomo/cookie-recipe">Click here to get more details about cookie recipe project</a></p>
     </div>
     <div class="projects-container1">
-      <p>Travel Website<br>This is a project that uses HTML and CSS to illustrate use of floats and dic elements</p>
+      <p>Giraffe Project<br>This is a project that uses HTML and CSS to illustrate use of classes and IDs in CSS<br><a href="https://github.com/jameskomo/branching-test-project.git">Click here to get more details about Giraffe project</a></p>
     </div>
     <div class="projects-container1">
-      <p>Portfolio Landing Page<br>This is a project that uses HTML and CSS to illustrate use of floats and dic elements</p>
+      <p>Portfolio Landing Page<br>This is a project that uses HTML and CSS to illustrate use all lessons learned in HTML, CSS, Git, GitHub and Linux Terminal<br><a href="https://github.com/jameskomo/jameskomo.github.io.git">Click here to get more details about Travel Website project</a></p>
     </div>
   </div>
 
