Span element use demosntrated

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
   <div class="aboutme">
     <h2>About me</h2>
-    <p> I am passionate about coding; not just typing away commands but creating things from ideation to deployment.</p>
+    <p> I am passionate about coding; not just typing away commands but <span class="whycode">creating things from ideation to deployment.</span></p>
     </div>
+
   <div  class="projectsdone">
     <h2>Projects</h2>
-  
+
     <div class="projects-container1">
       <p>Cookie Recipe<br>This is a project that uses HTML and CSS to to practice fixing indentation, spacing and HTML tag placement.<br><a href="https://github.com/jameskomo/cookie-recipe">Click here to get more details about cookie recipe project</a></p>
     </div>
