--- a/index.html
+++ b/index.html
@@ -9,27 +9,40 @@
     <div class="personaldetails">
     <img class="displayphoto" src="images/jkomo.png" alt="my photo"> <br>
     <h1 class="myname"><em> <strongName> <u>Name: James Komo<u></em> </strongName> </h1>
-      <p id=mytagline> I am here to create; not to become </p>
     </div>
 
   <div class="aboutme">
     <h2>About me</h2>
     <p> I am passionate about coding; not just typing away commands but <span class="whycode">creating things from ideation to deployment.</span></p>
-    </div>
+  </div>
+
+  <div class="education-work-background">
+  <h2>Education Background</h2>
+  <ol>
+    <li>Masters in Project Management-<strong>University of Viginia, Irvine</strong></li>
+    <li>Bachelor of Computer Science & Mathematics-<strong>Jomo Kenyatta University of Agriculture & Technology</strong></li>
+  </ol>
+  <h2>Working Experience</h2>
+  <ol>
+    <li>Knowledge Risk and Compliance-<strong>Seven Seas Technologies Limited, Nairobi Kenya</strong></li>
+    <li>ERP Documentation Specialist-<strong>Open Pro Systems CA,US</strong></li>
+  </ol>
+  </div>
 
   <div  class="projectsdone">
     <h2>Projects</h2>
 
     <div class="projects-container1">
-      <p>Cookie Recipe<br>This is a project that uses HTML and CSS to to practice fixing indentation, spacing and HTML tag placement.<br><a href="https://github.com/jameskomo/cookie-recipe">Click here to get more details about cookie recipe project</a></p>
+      <p><strong><Cookie Recipe</strong><br>This is a project that uses HTML and CSS to to practice fixing indentation, spacing and HTML tag placement.<br><a href="https://github.com/jameskomo/cookie-recipe">Click here to get more details about cookie recipe project</a></p>
     </div>
     <div class="projects-container1">
-      <p>Giraffe Project<br>This is a project that uses HTML and CSS to illustrate use of classes and IDs in CSS<br><a href="https://github.com/jameskomo/branching-test-project.git">Click here to get more details about Giraffe project</a></p>
+      <p><strong>Giraffe Project</strong><br>This is a project that uses HTML and CSS to illustrate use of classes and IDs in CSS<br><a href="https://github.com/jameskomo/branching-test-project.git">Click here to get more details about Giraffe project</a></p>
     </div>
     <div class="projects-container1">
-      <p>Portfolio Landing Page<br>This is a project that uses HTML and CSS to illustrate use all lessons learned in HTML, CSS, Git, GitHub and Linux Terminal<br><a href="https://github.com/jameskomo/jameskomo.github.io.git">Click here to get more details about Portfolio Landing Page project</a></p>
+      <p><strong>Portfolio Landing Page</strong><br>This is a project that uses HTML and CSS to illustrate use all lessons learned in HTML, CSS, Git, GitHub and Linux Terminal<br><a href="https://github.com/jameskomo/jameskomo.github.io.git">Click here to get more details about Portfolio Landing Page project</a></p>
     </div>
   </div>
+  <footer class="pagefooter">Website created by <strong>James Komo</strong></footer>
 
       </body>
 </html>
