Education and Work floating value defined

--- a/index.html
+++ b/index.html
@@ -16,18 +16,8 @@
     <p> I am passionate about coding; not just typing away commands but <span class="whycode">creating things from ideation to deployment.</span></p>
   </div>
 
-  <div class="education-work-background">
-  <h2>Education Background</h2>
-  <ol>
-    <li>Masters in Project Management-<strong>University of Viginia, Irvine</strong></li>
-    <li>Bachelor of Computer Science & Mathematics-<strong>Jomo Kenyatta University of Agriculture & Technology</strong></li>
-  </ol>
-  <h2>Working Experience</h2>
-  <ol>
-    <li>Knowledge Risk and Compliance-<strong>Seven Seas Technologies Limited, Nairobi Kenya</strong></li>
-    <li>ERP Documentation Specialist-<strong>Open Pro Systems CA,US</strong></li>
-  </ol>
-  </div>
+  <!--creating work and education background container -->
+
 
   <div  class="projectsdone">
     <h2>Projects</h2>
@@ -42,7 +32,25 @@
       <p><strong>Portfolio Landing Page</strong><br>This is a project that uses HTML and CSS to illustrate use all lessons learned in HTML, CSS, Git, GitHub and Linux Terminal<br><a href="https://github.com/jameskomo/jameskomo.github.io.git">Click here to get more details about Portfolio Landing Page project</a></p>
     </div>
   </div>
-  <footer class="pagefooter">Website created by <strong>James Komo</strong></footer>
 
-      </body>
+  <div  class="education-work">
+    <h2>Projects</h2>
+
+    <div class="education-background">
+      <h2>Education Background</h2>
+      <ol>
+        <li>Masters in Project Management-<strong>University of Viginia, Irvine</strong></li>
+        <li>Bachelor of Computer Science & Mathematics-<strong>Jomo Kenyatta University of Agriculture & Technology</strong></li>
+      </ol>
+   </div>
+    <div class="work-background">
+      <h2>Working Experience</h2>
+      <ol>
+        <li>Knowledge Risk and Compliance-<strong>Seven Seas Technologies Limited, Nairobi Kenya</strong></li>
+        <li>ERP Documentation Specialist-<strong>Open Pro Systems CA,US</strong></li>
+      </ol>
+    </div>
+  </div>
+
+</body>
 </html>
