project branch created

--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
         <li>ERP Documentation Specialist-<strong>Open Pro Systems CA,US</strong></li>
       </ol>
     </div>
-  </div>
 
+    <div class="hobbies">
+    <h2>Hobbies</h2>
+    <ul>
+      <li>Music</li>
+      <li>Adventure</li>
+      <li>Technology</li>
+    </ol>
+    </div>
+    </div>
+
+    </div>
+    <hr>
 </body>
 </html>
