--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
     </div>
 
     </div>
+
+    <div class="contactme">
+      <form id="contact" action="" method="post">
+         <h3>Contact Me</h3>
+         <fieldset>
+           <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+         </fieldset>
+         <fieldset>
+           <input placeholder="Your Email Address" type="email" tabindex="2" required>
+         </fieldset>
+         <fieldset>
+           <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3" required>
+         </fieldset>
+         <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
+         </fieldset>
+         <fieldset>
+           <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+         </fieldset>
+        </form>
+     </div>
+
+    </div>
     <hr>
 </body>
 </html>
