Recreating Webpage: Title added

--- a/index.html
+++ b/index.html
@@ -2,88 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Jameskomo Portfolio Landing Page</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>Komo Portfolio Landing Page</title>
   </head>
   <body>
-    <div class="personaldetails">
-    <img class="displayphoto" src="images/jkomo.png" alt="my photo"> <br>
-    <h1 class="myname"><em> <strongName> <u>Name: James Komo<u></em> </strongName> </h1>
-    </div>
 
-  <div class="aboutme">
-    <h2>About me</h2>
-    <p> I am passionate about coding; not just typing away commands but <span class="whycode">creating things from ideation to deployment.</span></p>
-  </div>
-
-  <!--creating work and education background container -->
-
-
-  <div  class="projectsdone">
-    <h2>Projects</h2>
-
-    <div class="projects-container1">
-      <p><strong><Cookie Recipe</strong><br>This is a project that uses HTML and CSS to to practice fixing indentation, spacing and HTML tag placement.<br><a href="https://github.com/jameskomo/cookie-recipe">Click here to get more details about cookie recipe project</a></p>
-    </div>
-    <div class="projects-container1">
-      <p><strong>Giraffe Project</strong><br>This is a project that uses HTML and CSS to illustrate use of classes and IDs in CSS<br><a href="https://github.com/jameskomo/branching-test-project.git">Click here to get more details about Giraffe project</a></p>
-    </div>
-    <div class="projects-container1">
-      <p><strong>Portfolio Landing Page</strong><br>This is a project that uses HTML and CSS to illustrate use all lessons learned in HTML, CSS, Git, GitHub and Linux Terminal<br><a href="https://github.com/jameskomo/jameskomo.github.io.git">Click here to get more details about Portfolio Landing Page project</a></p>
-    </div>
-  </div>
-
-  <div  class="education-work">
-    <h2>Projects</h2>
-
-    <div class="education-background">
-      <h2>Education Background</h2>
-      <ol>
-        <li>Masters in Project Management-<strong>University of Viginia, Irvine</strong></li>
-        <li>Bachelor of Computer Science & Mathematics-<strong>Jomo Kenyatta University of Agriculture & Technology</strong></li>
-      </ol>
-   </div>
-    <div class="work-background">
-      <h2>Working Experience</h2>
-      <ol>
-        <li>Knowledge Risk and Compliance-<strong>Seven Seas Technologies Limited, Nairobi Kenya</strong></li>
-        <li>ERP Documentation Specialist-<strong>Open Pro Systems CA,US</strong></li>
-      </ol>
-    </div>
-
-    <div class="hobbies">
-    <h2>Hobbies</h2>
-    <ul>
-      <li>Music</li>
-      <li>Adventure</li>
-      <li>Technology</li>
-    </ol>
-    </div>
-    </div>
-
-    </div>
-
-    <div class="contactme">
-      <form id="contact" action="" method="post">
-         <h3>Contact Me</h3>
-         <fieldset>
-           <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-         </fieldset>
-         <fieldset>
-           <input placeholder="Your Email Address" type="email" tabindex="2" required>
-         </fieldset>
-         <fieldset>
-           <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3" required>
-         </fieldset>
-         <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
-         </fieldset>
-         <fieldset>
-           <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-         </fieldset>
-        </form>
-     </div>
-
-    </div>
-    <hr>
-</body>
+  </body>
 </html>
