Favorite Icon (favicon added) to page title

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Komo Portfolio Landing Page</title>
+    <title>Komo Portfolio</title>
+    <link href="css/styles.css" rel="stylesheet">
+    <link rel="icon" href="images/komofavicon.ico">
+
   </head>
   <body>
+    <div class="personal-details">
+
+    </div>
+
+    <div  class="education-work">
+
+    </div>
+
+    <div class="projects">
+
+    </div>
+
+    <div class="contactme"></div>
 
   </body>
 </html>
