Photo added to page

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 
   </head>
   <body>
-    <div class="personal-details">
+    <div class="main-portfolio">
+      <div class="personal-details">
+      <<img src="images/jkomo.png" alt="myphoto">
 
-    </div>
+      </div>
 
-    <div  class="education-work">
+      <div  class="education-work">
 
-    </div>
 
-    <div class="projects">
+      </div>
 
-    </div>
+      <div class="projects">
 
-    <div class="contactme"></div>
+      </div>
+
+      <div class="contactme"></div>
+      </div>
 
   </body>
 </html>
