Added hypertext link to Google fonts to allow import of preferred fonts

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title>Komo Portfolio</title>
     <link href="css/styles.css" rel="stylesheet">
     <link rel="icon" href="images/komofavicon.ico">
-
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Indie+Flower|VT323" rel="stylesheet">
   </head>
   <body>
     <div class="main-portfolio">
       <div class="personal-details">
-      <<img src="images/jkomo.png" alt="myphoto">
+      <img class="myphoto" src="images/jkomo.png" alt="myphoto">
+      <<h1>I am Komo</h1>
+      <h2>I love <span class="what-i-love">Pro</span>gramming</h2>
 
       </div>
 
@@ -24,7 +26,7 @@
       </div>
 
       <div class="contactme"></div>
-      </div>
+    </div>
 
   </body>
 </html>
