--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Komo Portfolio</title>
-    <link href="css/styles.css" rel="stylesheet">
-    <link rel="icon" href="images/komofavicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Indie+Flower|VT323" rel="stylesheet">
-  </head>
-  <body>
-    <div class="main-portfolio">
-      <div class="personal-details">
-      <img class="myphoto" src="images/jkomo.png" alt="myphoto">
-      <<h1>I am Komo</h1>
-      <h2>I love <span class="what-i-love">Pro</span>gramming</h2>
 
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title>Komo Portfolio</title>
+  <link href="css/styles.css" rel="stylesheet">
+  <link rel="icon" href="images/komofavicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Indie+Flower|VT323" rel="stylesheet">
+</head>
 
-      <div  class="education-work">
+<body>
+
+  <div class="personal-details">
+    <img class="myphoto" src="images/jkomo.png" alt="myphoto">
+    <h1 class="myname">I am Komo</h1>
+    <h2 class="mypassion">I love <span class="what-i-love">Pro</span>gramming</h2>
+  </div>
 
 
-      </div>
+  <div class="education-work">
 
-      <div class="projects">
-
-      </div>
-
-      <div class="contactme"></div>
+    <div class="education">
+      <h1>Education Background</h1>
     </div>
 
-  </body>
+    <div class="work">
+      <h2>Work Experience</h2>
+    </div>
+
+  </div>
+
+  <div class="projects">
+    <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="cookie recipe">
+    <img class="travel-website" src="images/travel-website.svg" alt="Travel Website">
+    <img class="portfolio-page" src="images/portfolio-page.png" alt="Portfolio Landing Page">
+
+  </div>
+
+  <div class="contactme">
+    <h2>Contact me here</h2>
+    <a class="contact-button" href="mailto: james.komoh@gmail.com"> Reach me</a>
+  </div>
+</body>
+
 </html>
