education and worked section added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Komo Portfolio</title>
   <link href="css/styles.css" rel="stylesheet">
   <link rel="icon" href="images/komofavicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Indie+Flower|VT323" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Indie+Flower|Just+Another+Hand|VT323" rel="stylesheet">
 </head>
 
 <body>
@@ -17,11 +17,28 @@
     <h2 class="mypassion">I love <span class="what-i-love">Pro</span>gramming</h2>
   </div>
 
-  <div class="projects">
-    <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="cookie recipe">
-    <img class="travel-website" src="images/travel-website.svg" alt="Travel Website">
-    <img class="portfolio-page" src="images/portfolio-page.png" alt="Portfolio Landing Page">
+  <div class="education-work">
+    <div class="education">
+      <h2>Education Background</h2>
+    </div>
 
+    <div class="work">
+      <h2>Job Experience</h2>
+    </div>
+
+  </div>
+
+  <div class="projects">
+    <h1><span class="projects-done">Projects Done</span> </h1>
+    <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="cookie recipe">
+    <h2>Cookie Recipe</h2>
+    <p> This is a project based on CSS demonstrating use of branching and hosting on github"<p/>
+    <img class="travel-website" src="images/travel-website.svg" alt="Travel Website">
+    <h2>Travel Website</h2>
+    <p> This is a project based on HTML and CSS demonstrating use of Classes and IDs including preudo classes and elements<p/>
+    <img class="portfolio-page" src="images/portfolio-page.png" alt="Portfolio Landing Page">
+    <h2>Cookie Recipe</h2>
+    <p> This is a project based on HTML CSS covering all areas of both"<p/>
   </div>
 
   <div class="contactme">
