--- a/index.html
+++ b/index.html
@@ -1,50 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>James Komo Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/komofavicon.ico">
 
-<head>
-  <meta charset="utf-8">
-  <title>Komo Portfolio</title>
-  <link href="css/styles.css" rel="stylesheet">
-  <link rel="icon" href="images/komofavicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Indie+Flower|Just+Another+Hand|VT323" rel="stylesheet">
-</head>
 
-<body>
+  </head>
+  <body>
 
-  <div class="personal-details">
-    <img class="myphoto" src="images/jkomo.png" alt="myphoto">
-    <h1 class="myname">I am Komo</h1>
-    <h2 class="mypassion">I love <span class="what-i-love">Pro</span>gramming</h2>
-  </div>
+    <<div class="my-details">
+      <img src="images/jkomo.png" alt="My Photo">
 
-  <div class="education-work">
-    <div class="education">
-      <h2>Education Background</h2>
+
     </div>
 
-    <div class="work">
-      <h2>Job Experience</h2>
+    <div class="education-work">
+
+
     </div>
 
-  </div>
+    <<div class="projects-done">
+    <img src="images/cookie-recipe.svg" alt="Cookie Recipe">
+    <img src="images/travel-website.svg" alt="Travel Website">
+    <img src="images/portfolio-page.png" alt="Portfolio Landing Page">
 
-  <div class="projects">
-    <h1><span class="projects-done">Projects Done</span> </h1>
-    <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="cookie recipe">
-    <h2>Cookie Recipe</h2>
-    <p> This is a project based on CSS demonstrating use of branching and hosting on github"<p/>
-    <img class="travel-website" src="images/travel-website.svg" alt="Travel Website">
-    <h2>Travel Website</h2>
-    <p> This is a project based on HTML and CSS demonstrating use of Classes and IDs including preudo classes and elements<p/>
-    <img class="portfolio-page" src="images/portfolio-page.png" alt="Portfolio Landing Page">
-    <h2>Cookie Recipe</h2>
-    <p> This is a project based on HTML CSS covering all areas of both"<p/>
-  </div>
 
-  <div class="contactme">
-    <h2>Contact me here</h2>
-    <a class="contact-button" href="mailto: james.komoh@gmail.com"> Reach me</a>
-  </div>
-</body>
+    </div>
 
+    <div class="reach-me">
+
+
+    </div>
+
+  </body>
 </html>
