Images inserted and padding/margin properties defined

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
 
-    <<div class="my-details">
-      <img src="images/jkomo.png" alt="My Photo">
+    <div class="my-details">
+      <img class="myphoto" src="images/jkomo.png" alt="My Photo">
 
 
     </div>
@@ -21,12 +21,10 @@
 
     </div>
 
-    <<div class="projects-done">
-    <img src="images/cookie-recipe.svg" alt="Cookie Recipe">
-    <img src="images/travel-website.svg" alt="Travel Website">
-    <img src="images/portfolio-page.png" alt="Portfolio Landing Page">
-
-
+    <div class="projects-done">
+      <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="Cookie Recipe">
+      <img class="travel-website"src="images/travel-website.svg" alt="Travel Website">
+      <img class="portfolio-page"src="images/portfolio-page.png" alt="Portfolio Landing Page">
     </div>
 
     <div class="reach-me">
