Projects section images aligned

--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
 
     <div class="projects-done">
       <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="Cookie Recipe">
+      <h2>Cookie Recipe</h2>
+      <h4>This is project done in HTML and CSS to demonstrate branching, floating and use of GitHub in development. ore information <a href="">here</a></h4>
       <img class="travel-website"src="images/travel-website.svg" alt="Travel Website">
+      <h2>Travel Website</h2>
+      <h4>This is project done in HTML and CSS to demonstrate use of classes, IDs, cascading and Inheritance. More information <a href="">here</a></h4>
       <img class="portfolio-page"src="images/portfolio-page.png" alt="Portfolio Landing Page">
+      <h2>Portfolio Landing Page</h2>
+      <h4>This is project done in HTML and CSS to demonstrate all aspects of both mark up languages. More information <a href="">here</a></h4>
     </div>
 
     <div class="reach-me">
