Projects section images aligned

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <div class="my-details">
       <img class="myphoto" src="images/jkomo.png" alt="My Photo">
-
+      <h1> I am K.O.M.O </h1>
+      <h2>I love <span class="my-passion">PRO</span>gramming</h2>
 
     </div>
 
@@ -23,8 +24,8 @@
 
     <div class="projects-done">
       <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="Cookie Recipe">
-      <h2>Cookie Recipe</h2>
-      <h4>This is project done in HTML and CSS to demonstrate branching, floating and use of GitHub in development. ore information <a href="">here</a></h4>
+      <h2 class="recipe">Cookie Recipe</h2>
+      <h4 class="recipe">This is project done in HTML and CSS to demonstrate branching, floating and use of GitHub in development. More information <a href="">here</a></h4>
       <img class="travel-website"src="images/travel-website.svg" alt="Travel Website">
       <h2>Travel Website</h2>
       <h4>This is project done in HTML and CSS to demonstrate use of classes, IDs, cascading and Inheritance. More information <a href="">here</a></h4>
