personal-details container modified

--- a/index.html
+++ b/index.html
@@ -17,10 +17,28 @@
 
     </div>
 
+    <hr class="hr">
+
     <div class="education-work">
+      <div class="education-background">
+        <h2>Education Background</h2>
+        <ul>
+          <li>Masters in Project Management-<strong>University of Viginia, Irvine</strong></li>
+          <li>Bachelor of Computer Science & Mathematics-<strong>Jomo Kenyatta University of Agriculture & Technology</strong></li>
+        </ul>
+     </div>
+      <div class="work-background">
+        <h2>Working Experience</h2>
+        <ul>
+          <li>Knowledge Risk and Compliance-<strong>Seven Seas Technologies Limited, Nairobi Kenya</strong></li>
+          <li>ERP Documentation Specialist-<strong>Open Pro Systems CA,US</strong></li>
+        </ul>
+      </div>
 
 
     </div>
+
+    <hr class="hr">
 
     <div class="projects-done">
       <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="Cookie Recipe">
