Contact me link added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
       <h2>I love <span class="my-passion">PRO</span>gramming</h2>
 
     </div>
-
     <hr class="hr">
-
-    <div class="education-work">
+        <div class="education-work">
       <div class="education-background">
         <h2>Education Background</h2>
         <ul>
@@ -38,8 +36,6 @@
 
     </div>
 
-    <hr class="hr">
-
     <div class="projects-done">
       <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="Cookie Recipe">
       <h2 class="recipe">Cookie Recipe</h2>
@@ -53,6 +49,7 @@
     </div>
 
     <div class="reach-me">
+      <a class="emailme" href=mailto: james.komoh@gmail.com">Email Me </<a>
 
 
     </div>
