Links added to LinkedIn

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="reach-me">
       <a class="emailme" href=mailto: james.komoh@gmail.com">Email Me </<a>
-
+      <p><a href="https://linkedin.com/jameskomo"> LinkedIn </a>
 
     </div>
 
