hyperlinks created to previous projects

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="education-background">
         <h2>Education Background</h2>
         <ul>
-          <li>Masters in Project Management-<strong>University of Viginia, Irvine</strong></li>
+          <li>Masters in Project Management-<strong>University of Virginia, Irvine</strong></li>
           <li>Bachelor of Computer Science & Mathematics-<strong>Jomo Kenyatta University of Agriculture & Technology</strong></li>
         </ul>
      </div>
@@ -39,18 +39,19 @@
     <div class="projects-done">
       <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="Cookie Recipe">
       <h2 class="recipe">Cookie Recipe</h2>
-      <h4 class="recipe">This is project done in HTML and CSS to demonstrate branching, floating and use of GitHub in development. More information <a href="">here</a></h4>
+      <h4 class="recipe">This is project done in HTML and CSS to demonstrate branching, floating and use of GitHub in development. More information <a href="https://github.com/jameskomo/cookie-recipe">here</a></h4>
       <img class="travel-website"src="images/travel-website.svg" alt="Travel Website">
       <h2>Travel Website</h2>
-      <h4>This is project done in HTML and CSS to demonstrate use of classes, IDs, cascading and Inheritance. More information <a href="">here</a></h4>
+      <h4>This is project done in HTML and CSS to demonstrate use of classes, IDs, cascading and Inheritance. More information <a href="https://github.com/jameskomo/my-first-website">here</a></h4>
       <img class="portfolio-page"src="images/portfolio-page.png" alt="Portfolio Landing Page">
       <h2>Portfolio Landing Page</h2>
-      <h4>This is project done in HTML and CSS to demonstrate all aspects of both mark up languages. More information <a href="">here</a></h4>
+      <h4>This is project done in HTML and CSS to demonstrate all aspects of both mark up languages. More information <a href="https://github.com/jameskomo/jameskomo.github.io.git">here</a></h4>
     </div>
 
     <div class="reach-me">
-      <a class="emailme" href=mailto: james.komoh@gmail.com">Email Me </<a>
-      <p><a href="https://linkedin.com/jameskomo"> LinkedIn </a>
+      <h2> Contact Komo here </h1>
+      <p><a class="emailme" href=mailto: james.komoh@gmail.com">Email Me </a>
+      <p><a href="https://www.linkedin.com/in/jameskomo/"> LinkedIn </a> </p>
 
     </div>
 
