Copyright symbol added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <h2> Contact Komo here </h1>
       <p><a class="emailme" href=mailto: james.komoh@gmail.com">Email Me </a>
       <p><a href="https://www.linkedin.com/in/jameskomo/"> LinkedIn </a> </p>
+      <p> &#169; 2019 James Komo</p>
 
     </div>
 
