Fonts link added in <head> section and fonts imported from Google Fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>James Komo Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/komofavicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase|Niramit|Waiting+for+the+Sunrise" rel="stylesheet">
 
 
   </head>
