GIF image included under footer section

--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
     <title>James Komo Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/komofavicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase|Niramit|Waiting+for+the+Sunrise" rel="stylesheet">
-
-
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase|Niramit|Special+Elite|Waiting+for+the+Sunrise" rel="stylesheet">
   </head>
   <body>
 
     <div class="my-details">
       <img class="myphoto" src="images/jkomo.png" alt="My Photo">
-      <h1> I am K.O.M.O </h1>
+      <h1 class="myname"> I am K.O.M.O </h1>
       <h2>I love <span class="my-passion">PRO</span>gramming</h2>
 
     </div>
     <hr class="hr">
         <div class="education-work">
       <div class="education-background">
+        <h1 class="projects-header"><em><strong>Work and Education Background</em></strong> </h1>
         <h2>Education Background</h2>
         <ul>
           <li>Masters in Project Management-<strong>University of Virginia, Irvine</strong></li>
@@ -38,6 +37,7 @@
     </div>
 
     <div class="projects-done">
+      <h1 class="projects-header"><em><strong>Projects Done</em></strong> </h1>
       <img class="cookie-recipe" src="images/cookie-recipe.svg" alt="Cookie Recipe">
       <h2 class="recipe">Cookie Recipe</h2>
       <h4 class="recipe">This is project done in HTML and CSS to demonstrate branching, floating and use of GitHub in development. More information <a href="https://github.com/jameskomo/cookie-recipe">here</a></h4>
@@ -50,7 +50,8 @@
     </div>
 
     <div class="reach-me">
-      <h2> Contact Komo here </h1>
+      <h2> Contact Komo here </h2>
+      <img src="images/giphy.gif" alt="Giphy Image">
       <p><a class="emailme" href=mailto: james.komoh@gmail.com">Email Me </a>
       <p><a href="https://www.linkedin.com/in/jameskomo/"> LinkedIn </a> </p>
       <p> &#169; 2019 James Komo</p>
