Read Me content added

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <img class="myphoto" src="images/jkomo.png" alt="My Photo">
     <h1 class="myname"> I am K.O.M.O </h1>
     <h2>I love <span class="my-passion">PRO</span>gramming</h2>
+    <h3>I decided to take a class in programming to learn how to be a creator of solutions</h3>
 
   </div>
   <hr class="hr">
   <div class="education-work">
     <div class="education-background">
-      <h1 class="projects-header"><em><strong>Work and Education Background</em></strong> </h1>
+      <h1 class="projects-header"><em><strong>Education & Work Background</em></strong> </h1>
       <h2>Education Background</h2>
       <ul>
         <li>Masters in Project Management-<strong>University of Virginia, Irvine</strong></li>
@@ -33,6 +34,7 @@
         <li>Knowledge Risk and Compliance-<strong>Seven Seas Technologies Limited, Nairobi Kenya</strong></li>
         <li>ERP Documentation Specialist-<strong>Open Pro Systems CA,US</strong></li>
       </ul>
+      <h3>When am not in school or working find me on <em>adventure, volunteering or enjoy the local arts arena.</em>
     </div>
 
 
